unpackaged/main/default/objects/EBH_DealRetailCampaign__c/EBH_DealRetailCampaign__c.object-meta.xml
<CustomObject>
    <description>[EBH] (EPH-5481) - Deal Retail Campaign</description>
    <label>Deal Retail Campaign</label>
    <nameField>
        <displayFormat>DRC-{0000000000}</displayFormat>
        <label>Deal Retail Campaign ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Deal Retail Campaigns</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>