unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Deal_Window__c.field-meta.xml
<CustomField>
    <fullName>Deal_Window__c</fullName>
    <description>US-0009621</description>
    <formula>TEXT(Start_Retail_Week__c) +  IF(ISPICKVAL(End_Retail_Week__c,&#39;&#39;),&#39;&#39;,&#39;.&#39;) + TEXT(End_Retail_Week__c ) + IF(ISBLANK(Year__c),&#39;&#39;,&#39;-&#39;) + Year__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Deal Window</label>
    <type>Text</type>
</CustomField>