unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_AcceptProposalsEnd__c.field-meta.xml
<CustomField>
    <fullName>EBH_AcceptProposalsEnd__c</fullName>
    <description>(EPH-5481) Accept Proposals End Date</description>
    <label>Accept Proposals End Date</label>
    <type>Date</type>
</CustomField>