unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_AcceptProposalsStart__c.field-meta.xml
<CustomField>
    <fullName>EBH_AcceptProposalsStart__c</fullName>
    <description>(EPH-5481) Accept Proposals Start Date</description>
    <label>Accept Proposals Start Date</label>
    <type>Date</type>
</CustomField>