unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_Country__c.field-meta.xml
<CustomField>
    <fullName>EBH_Country__c</fullName>
    <description>Deal Site ID</description>
    <label>Deal Site</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>77</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
            <value>
                <fullName>71</fullName>
            </value>
            <value>
                <fullName>101</fullName>
            </value>
            <value>
                <fullName>186</fullName>
            </value>
            <value>
                <fullName>15</fullName>
                <label>AU</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>US</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>