unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_Date__c.field-meta.xml
<CustomField>
    <fullName>EBH_Date__c</fullName>
    <description>(EPH-5481) Deal Retail Campaign Start Date</description>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>