unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_DealFormat__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealFormat__c</fullName>
    <description>(EPH-5481) Deal Format</description>
    <label>Deal Format</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Primary</fullName>
            </value>
            <value>
                <fullName>Featured</fullName>
            </value>
            <value>
                <fullName>Core</fullName>
            </value>
            <value>
                <fullName>Deal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>