unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_DealSlotDisabled__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealSlotDisabled__c</fullName>
    <defaultValue>true</defaultValue>
    <description>(EPH-5481) Deal Slot Disabled</description>
    <label>Campaign Disabled</label>
    <type>Checkbox</type>
</CustomField>