unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_DealTitle__c.field-meta.xml
<CustomField>
    <fullName>EBH_DealTitle__c</fullName>
    <description>(EPH-5481) Deal Retail Calendar Title</description>
    <label>Retail Campaign Title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>