unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_Description__c.field-meta.xml
<CustomField>
    <fullName>EBH_Description__c</fullName>
    <description>(EPH-5481) Retail Description</description>
    <label>Retail Campaign Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>