unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EBH_Slots__c.field-meta.xml
<CustomField>
    <fullName>EBH_Slots__c</fullName>
    <label>Number of Slots</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>