unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/End_Date_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>End_Date_MM_DD_YYYY__c</fullName>
    <description>US-0009790 - [SEP] Notification sent to Operations Team when Deal Window is updated to Status = &#39;Ops Review&#39; - For format MM/DD/YYY</description>
    <formula>LPAD(TEXT(MONTH(EPH_EndDate__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;LPAD(TEXT(DAY(EPH_EndDate__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;TEXT(YEAR(EPH_EndDate__c))</formula>
    <label>End Date (MM/DD/YYYY)</label>
    <type>Text</type>
</CustomField>