unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/End_Time__c.field-meta.xml
<CustomField>
    <fullName>End_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;04:59:00.000&quot;)</defaultValue>
    <description>US-0009621</description>
    <label>End Time</label>
    <type>Time</type>
</CustomField>