unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/EPH_EndDate__c.field-meta.xml
<CustomField>
    <fullName>EPH_EndDate__c</fullName>
    <description>(EPH-5481) End Date</description>
    <label>End Date</label>
    <type>Date</type>
</CustomField>