unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Focus_Categories__c.field-meta.xml
<CustomField>
    <fullName>Focus_Categories__c</fullName>
    <label>Focus Categories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Electronics</fullName>
            </value>
            <value>
                <fullName>Fashion</fullName>
            </value>
            <value>
                <fullName>Motor</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>