unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Open_Slots_Available_w__c.field-meta.xml
<CustomField>
    <fullName>Open_Slots_Available_w__c</fullName>
    <description>US-0011519 - Deal Retail Campaign Updates</description>
    <formula>IF(AND(EBH_AcceptProposalsEnd__c &lt; TODAY(),EBH_OpenSeatsAvailable__c &gt; 0),0, EBH_OpenSeatsAvailable__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Open Slots Available</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>