unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Related_Deal_Retail_Campaign__c.field-meta.xml
<CustomField>
    <fullName>Related_Deal_Retail_Campaign__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>used to relate to the Seller Window DRC record type</description>
    <label>Related Deal Retail Campaign</label>
    <referenceTo>EBH_DealRetailCampaign__c</referenceTo>
    <relationshipLabel>Deal Retail Campaigns</relationshipLabel>
    <relationshipName>Deal_Retail_Campaigns</relationshipName>
    <type>Lookup</type>
</CustomField>