unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Retail_Moment_Inventory__c.field-meta.xml
<CustomField>
    <fullName>Retail_Moment_Inventory__c</fullName>
    <description>US-0009621</description>
    <label>Retail Moment &amp; Inventory</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>