unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Start_Date_MM_DD_YYYY__c.field-meta.xml
<CustomField>
    <fullName>Start_Date_MM_DD_YYYY__c</fullName>
    <description>US-0009790 - [SEP] Notification sent to Operations Team when Deal Window is updated to Status = &#39;Ops Review&#39; - For format MM/DD/YYY</description>
    <formula>LPAD(TEXT(MONTH(EBH_Date__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;LPAD(TEXT(DAY(EBH_Date__c)),2,&quot;0&quot;)&amp;&quot;/&quot;&amp;TEXT(YEAR(EBH_Date__c))</formula>
    <label>Start Date (MM/DD/YYYY)</label>
    <type>Text</type>
</CustomField>