unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Start_Time__c.field-meta.xml
<CustomField>
    <fullName>Start_Time__c</fullName>
    <defaultValue>TIMEVALUE(&quot;05:00:00.000&quot;)</defaultValue>
    <description>US-0009621</description>
    <label>Start Time</label>
    <type>Time</type>
</CustomField>