unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Status_Seller_Portal__c.field-meta.xml
<CustomField>
    <fullName>Status_Seller_Portal__c</fullName>
    <description>US-0009684</description>
    <formula>CASE(Status__c,
  &#39;Draft&#39;,&#39;Draft&#39;,
  &#39;Pending&#39;, &#39;Pending&#39;,
  &#39;Open for Submissions&#39;,&#39;Open for Submissions&#39;,
  &#39;Ops Review&#39;,&#39;Closed for Submissions&#39;,
  &#39;CM Review&#39;,&#39;Closed for Submissions&#39;,
  &#39;Scheduled&#39;,&#39;Closed for Submissions&#39;,
  &#39;Running&#39;,&#39;Running&#39;,
  &#39;Completed&#39;,&#39;Completed&#39;,&#39;&#39;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Status</label>
    <type>Text</type>
</CustomField>