unpackaged/main/default/objects/EBH_DealRetailCampaign__c/fields/Year__c.field-meta.xml
<CustomField>
    <fullName>Year__c</fullName>
    <description>US-0009621</description>
    <formula>TEXT(YEAR(EBH_Date__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Year</label>
    <type>Text</type>
</CustomField>