unpackaged/main/default/objects/EBH_DealRetailCampaign__c/recordTypes/Deal_Campaign_V1.recordType-meta.xml
<RecordType>
    <fullName>Deal_Campaign_V1</fullName>
    <active>true</active>
    <label>Standard Campaign</label>
</RecordType>