unpackaged/main/default/objects/EBH_DealRetailCampaign__c/recordTypes/Deal_Campaign_V2.recordType-meta.xml
<RecordType>
    <fullName>Deal_Campaign_V2</fullName>
    <active>true</active>
    <label>NA Deal Window</label>
</RecordType>