unpackaged/main/default/objects/EBH_DealRetailCampaign__c/recordTypes/Deal_Campaign_V3.recordType-meta.xml
<RecordType>
    <fullName>Deal_Campaign_V3</fullName>
    <active>true</active>
    <label>NA Retail Campaign</label>
</RecordType>