unpackaged/main/default/objects/EBH_DealRetailCampaign__c/validationRules/Required_Fields_NOT_Draft.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Fields_NOT_Draft</fullName>
    <active>true</active>
    <errorConditionFormula>(RecordType.Name = &quot;Deal Window&quot; || RecordType.Name = &quot;Deal Window Campaign&quot;) &amp;&amp;
NOT(ISPICKVAL(Status__c,&quot;Draft&quot;)) &amp;&amp;

(
ISBLANK(EBH_DealTitle__c) ||
ISBLANK(EBH_Date__c) ||
ISBLANK(EPH_EndDate__c)
)</errorConditionFormula>
    <errorMessage>Please give this record a Name and Start and End Dates before moving out of Status = Draft</errorMessage>
</ValidationRule>