unpackaged/main/default/objects/EBH_DealRetailCampaign__c/validationRules/StartDate_Must_Be_Before_EndDate.validationRule-meta.xml
<ValidationRule>
    <fullName>StartDate_Must_Be_Before_EndDate</fullName>
    <active>true</active>
    <description>US-0010110 - [SEP] Required fields for Deal Windows</description>
    <errorConditionFormula>AND(
     RecordType.DeveloperName = &#39;Deal_Campaign_V2&#39;,
     EPH_EndDate__c  &lt;  EBH_Date__c ,
     NOT($Setup.byPass__c.ByPass_Validation__c)
)</errorConditionFormula>
    <errorMessage>Start Date must be before End Date</errorMessage>
</ValidationRule>