unpackaged/main/default/objects/EBH_DealRetailCampaign__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_Date__c</columns>
    <columns>EBH_DealTitle__c</columns>
    <columns>EBH_DealFormat__c</columns>
    <columns>EBH_OpenSeatsAvailable__c</columns>
    <columns>EBH_DealSlotDisabled__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>