unpackaged/main/default/objects/EBH_DealRetailCampaign__c/listViews/ALL_US.listView-meta.xml
<ListView>
    <fullName>ALL_US</fullName>
    <columns>NAME</columns>
    <columns>Deal_Window__c</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_Date__c</columns>
    <columns>EBH_DealTitle__c</columns>
    <columns>EBH_DealFormat__c</columns>
    <columns>EBH_OpenSeatsAvailable__c</columns>
    <columns>EBH_DealSlotDisabled__c</columns>
    <columns>Status__c</columns>
    <columns>RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EBH_Country__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>RECORDTYPE</field>
        <operation>equals</operation>
        <value>EBH_DealRetailCampaign__c.Deal_Campaign_V2</value>
    </filters>
    <label>ALL - US</label>
</ListView>