unpackaged/main/default/objects/EBH_DealRetailCampaign__c/listViews/AU_Retail_Campaigns.listView-meta.xml
<ListView>
    <fullName>AU_Retail_Campaigns</fullName>
    <columns>EBH_Date__c</columns>
    <columns>EPH_EndDate__c</columns>
    <columns>EBH_DealTitle__c</columns>
    <columns>EBH_Slots__c</columns>
    <columns>EBH_OpenSeatsAvailable__c</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_DealSlotDisabled__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EBH_Country__c</field>
        <operation>equals</operation>
        <value>15</value>
    </filters>
    <label>AU Retail Campaigns</label>
</ListView>