unpackaged/main/default/objects/EBH_DealRetailCampaign__c/listViews/FR_Retail_campaigns.listView-meta.xml
<ListView>
    <fullName>FR_Retail_campaigns</fullName>
    <columns>NAME</columns>
    <columns>EBH_DealTitle__c</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_Date__c</columns>
    <columns>EPH_EndDate__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EBH_Country__c</field>
        <operation>equals</operation>
        <value>71</value>
    </filters>
    <label>FR Retail campaigns</label>
</ListView>