unpackaged/main/default/objects/EBH_DealRetailCampaign__c/listViews/IT_Retail_Campaings.listView-meta.xml
<ListView>
    <fullName>IT_Retail_Campaings</fullName>
    <columns>NAME</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_DealTitle__c</columns>
    <columns>EBH_Date__c</columns>
    <columns>EPH_EndDate__c</columns>
    <columns>EBH_DealSlotDisabled__c</columns>
    <columns>EBH_AcceptProposalsStart__c</columns>
    <columns>EBH_AcceptProposalsEnd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EBH_Country__c</field>
        <operation>equals</operation>
        <value>101</value>
    </filters>
    <label>IT Retail Campaings</label>
</ListView>