unpackaged/main/default/objects/EBH_DealRetailCampaign__c/listViews/Retail_Campaigns_Kirsten.listView-meta.xml
<ListView>
    <fullName>Retail_Campaigns_Kirsten</fullName>
    <columns>NAME</columns>
    <columns>EBH_Country__c</columns>
    <columns>EBH_DealTitle__c</columns>
    <columns>EBH_Category__c</columns>
    <columns>EBH_Date__c</columns>
    <columns>EPH_EndDate__c</columns>
    <columns>EBH_Slots__c</columns>
    <columns>EBH_OpenSeatsAvailable__c</columns>
    <columns>EBH_DealSlotDisabled__c</columns>
    <columns>EBH_AcceptProposalsStart__c</columns>
    <columns>EBH_AcceptProposalsEnd__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>EBH_DealSlotDisabled__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>EBH_Category__c</field>
        <operation>equals</operation>
        <value>Garten &amp; Terrasse,Haustierbedarf,Heimwerker</value>
    </filters>
    <label>Retail-Campaigns_Home-Improvement</label>
</ListView>